# media-tools

./: .gitignore  FFMPEG_TESTS.md  Makefile  README.md  mkdocs.yml  pyproject.toml  rename_md5.py  run_ffmpeg_tests.py
docs/: intro_to_ffmpeg_interface.md  intro_to_image_files.md  intro_to_mediadir.md
examples/: 0-managing_media_files.ipynb  1-image_processing.ipynb  3-ffmpeg_interface.ipynb  4_media_index_database.ipynb  example_helpers.py  intro_to_ffmpeg_interface.ipynb  intro_to_image_files.ipynb  intro_to_mediadir.ipynb  intro_to_mongodb_index.ipynb
requirements/: packages.txt  requirements.txt
scripts/: Makefile  SETUP_AI_SCALER.md  app.py  cr3_convert.py  create_montage.py  create_montage_gopro_v1.py  create_montage_gopro_v2.py  create_montage_gopro_v3.py  create_montage_recursive_v1.py  create_montage_v1.py  create_montage_v2.py  downscale_images_v1.py  dsync.py  gopro_montage.sh  gopro_video_groups.json  main.py  make_compilations.py  make_compress.py  make_website.py  make_website_old.py  make_website_v3.py  montage_collections.py  organize_ft.py  organize_ftv.py  organize_gopro.py  rename.py  scan_videos_v1.py  scan_videos_v2.py  scrape_pages.py  scraper.py  server_v1.py  server_v2.py  server_v3.py  server_v4.py  test.py  test_media_dir_index.py  test_mongodb.py  test_montage.ipynb  test_symlink_approach.ipynb  test_tree.py  (+4 more)
scripts/app/: main.py
scripts/depricated/: main.py  make_compilations.py  make_compress.py  make_montage.py  make_website_v2.py  make_website_v3.py
scripts/templates/: gpt_multi_v03.html  gpt_multi_v04.html  gpt_multi_v05.html  gpt_multi_v06.html  gpt_multi_v07.html  gpt_multi_v07_crazy.html  gpt_multi_v2.2.html
scripts/templates/old/: gpt_single_video_v4.html
src/mediatools/: __init__.py  constants.py  ffmpeg.py  file_base.py  file_stat_result.py  mediadir.py  metadata.py  util.py
src/mediatools/ai/: __init__.py  command.py  transcribe.py  upscale.py
src/mediatools/db/: media_dir_index.py  video_index.py
src/mediatools/depricated/site/: file_stat_info.py  media_dir_index.py  media_site_index_db.py  video_file_index.py
src/mediatools/depricated/site_v2/: siteconfig.py  util.py
src/mediatools/images/: __init__.py  image.py  image_file.py  image_files.py  image_info.py  image_meta.py
src/mediatools/index_db/: __init__.py  media_dir_index.py  media_index.py  media_index_db.py  mediadir_index_collection.py  util.py  video_index.py  video_index_collection.py
src/mediatools/mediasite/: imginfo.py  vidinfo.py
src/mediatools/site/: __init__.py  baseinfo.py  imginfo.py  infobase.py  media_dir_index.py  media_site_index_db.py  mediapage.py  mediasite.py  pageinfo.py  siteconfig.py  util.py  video_file_index.py  vidinfo.py
src/mediatools/site_old/: imginfo.py  infobase.py  pageinfo.py
src/mediatools/video/: __init__.py  errors.py  ffmpeg.py  ffmpeg_tools.py  probe_info.py  result.py  stream_info.py  util.py  video_file.py  video_files.py  video_info.py  video_meta.py
src/mediatools/video/depricated/: videotools.py  (+1 more)
src/mediatools/vtools/: errors.py  video_file.py
tests/: test_ffmpeg_clean.py  test_ffmpeg_interface.py  test_ffmpeg_tools.py  test_image_processing.py  test_image_tools.py  test_media_files.py  test_media_management.py
(+38 files in other folders)
