[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mediatools"
version = "0.1"
authors = [
  { name="Devin J. Cornell", email="devincornell@github.com" },
]
description = " Tools for working with video, audio, and image data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://devinjcornell.com"
