[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mediatools"
version = "0.1"
authors = [
  { name="Devin J. Cornell", email="devincornell@github.com" },
]
description = " Tools for working with video, audio, and image data."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "imageio[opencv,pyav]>=2.37.3",
    "jinja2>=3.1.6",
    "pydantic>=2.13.3",
    "pymongo>=4.17.0",
    "requests>=2.33.1",
    "scikit-image>=0.25.2",
    "tqdm>=4.67.3",
]

[project.urls]
Homepage = "https://devinjcornell.com"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ffmpeg: marks tests that require FFmpeg binary",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipynb>=0.5.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "nbconvert>=7.17.1",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
]
site = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]
